use new docker image

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,14 +3,12 @@ version: "3"
 services:
 
   conocert-api:
-    image: muilpp/concert-api:latest
+    image: muilpp/concerts:latest
     network_mode: "host"
     ports: 
       - 8282
       - 80
     command: >
-      sh -c "cd concert-schedules && 
-             echo $LASTFM_KEY > LastFMApiKey.txt &&
-             echo $SONGKICK_KEY > SongKickApiKey.txt &&
-             ./concert-schedules"
-
+      sh -c "cd concert-schedules && echo $LASTFM_KEY > keys/LastFMApiKey.txt
+      && echo $SONGKICK_KEY > keys/SongKickApiKey.txt
+      && ./concerts"
