--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,6 @@ services:
     ports: 
       - 8282:8282
     command: >
-      sh -c "cd concert-schedules && echo $LASTFM_KEY > keys/LastFMApiKey.txt
-      && echo $SONGKICK_KEY > keys/SongKickApiKey.txt
+      sh -c "cd concert-schedules
+      && echo SONG_KICK_API_KEY=$SONGKICK_KEY > credentials.env
       && ./concerts"
